--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bitcoinapi",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "manager.js",
@@ -10,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "node": "^15.4.0"
+    "node": "^14.16.0"
   }
 }
