--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "bitcoinapi",
+  "name": "polybar-cripto-manager",
   "type": "module",
   "version": "1.0.0",
-  "description": "",
-  "main": "manager.js",
+  "description": "this provides informations about your cripto assets",
+  "main": "src/manager.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "moreiravictor",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
     "node": "^14.16.0"
