making script easily globally executable

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "description": "this provides informations about your cripto assets",
   "main": "src/manager.js",
   "scripts": {
+    "start": "./install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "moreiravictor",
   "license": "MIT",
+  "bin": {
+    "cm": "./src/manager.js"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
